[FIX] Z-index position of header in style.css

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ header{
     width: 100%;
     display: flex;
     justify-content: flex-end;
+    z-index: 1;
 }
 
 ul{
